fix vertical spacing of rows a little bit

--- a/d3-test/example.css
+++ b/d3-test/example.css
@@ -20,7 +20,8 @@ html,body,#wrapper {
 }
  
 .label {
-
+	font-size: 10px;
+	font-family: Arial, sans-serif;
 }
 
 .bar {
